Closed Bug 420003 Opened 17 years ago Closed 17 years ago

Sort by name on tag container produces unexpected behavior

Categories

(Firefox :: Bookmarks & History, defect, P2)

defect

Tracking

()

VERIFIED FIXED
Firefox 3 beta5

People

(Reporter: zurtex, Assigned: ondrej)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached image Before and after of the error (obsolete) —
Latest trunk build as I post this: 1) Click "Smart Bookmarks" in bookmark toolbar 2) Go to recent tags 3) Right click on a tag container and sort by name 4) View horrific result Restart restores titles...
Flags: blocking-firefox3?
Just test on Linux, exactly the same problem, so I assume it's fairly safe to say it's cross platform.
OS: Windows Server 2003 → All
Priority: -- → P2
Hardware: PC → All
Flags: blocking-firefox3? → blocking-firefox3+
Assignee: nobody → ondrej
Target Milestone: --- → Firefox 3
Order of query based queries should not be modifiable. The solution for this bugs is to disable this command.
Status: NEW → ASSIGNED
(In reply to comment #2) > Order of query based queries should not be modifiable. The solution for this > bugs is to disable this command. > We have 3 places where we can see tag containers. A) Bookmark Toolbar -> Smart Bookmarks -> Recent Tags B) Places Library -> All Bookmarks (and the same as above) C) Places Library -> Tags The set of commands seems to be the same for A and C, with the same result when sorting (fortunately titles are not really deleted, just nulled in memory). In case B they are not modifiable. But there are more problems, it seems strange to me, that it is allowed to create a new folder or new bookmark inside of tag container. When I right click on the right side I can even create a separator. Creating a new bookmark this way automatically shows as if it was tagged this way (what seems correct). My suggestion for this bug: - disallow adding new content to the tag containers everywhere, - fix sort by name to work properly (probably only annotation versus bookmark title problem).
Depends on: 419731
The problem of empty titles is caused by wrong query in mDBBookmarkToUrlResult (nsNavHistory.cpp). It does not perform the same COALESCE on places title as mDBGetChildren does (this may get fixed by bug 419731, but I decouple those two for a moment). Another problem is sorting. Sort by name actually works - it changes the position of included links, however, the bookmark query that displays them in "Smart Bookmarks" sorts by SORT_BY_DATE_DESCENDING. Sorting will be removed to use the original one. Unfortunately this will not solve the sorting problem due to bug 359332.
No longer depends on: 419731
Summary: Sort by name fails and removes titles for tag containers → Sort by name on tag container removes titles of tagged links and does not show correct order
This does not solve the bug completely, but it solves the scarifying problem of disappearing titles. The fact that sort order is not visible should be solved with bug 359332 (which I will nominate to block Fx3).
Attachment #307260 - Flags: review?(dietrich)
Attachment #307260 - Attachment mime type: application/octet-stream → text/plain
Comment on attachment 307260 [details] Fix disappearing titles r=me. please note on bug 359332 that the sorting options removed here need to be re-added when it gets fixed.
Attachment #307260 - Flags: review?(dietrich) → review+
Blocks: 421118
Keywords: checkin-needed
Checking in toolkit/components/places/src/nsNavHistory.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistory.cpp,v <-- nsNavHistory.cpp new revision: 1.267; previous revision: 1.266 done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
verified with: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008032106 Minefield/3.0b5pre
Status: RESOLVED → VERIFIED
The current behavior for this is even worse, currently all bookmarks are removed! But given that tag behavior is changing, I'm not sure what can be done about this at the moment, see bug 419731.
Status: VERIFIED → REOPENED
Depends on: 419731
Resolution: FIXED → ---
Summary: Sort by name on tag container removes titles of tagged links and does not show correct order → Sort by name on tag container produces unexpected behavior
Sorry, I'd like to update the behavior here. All the bookmarks aren't removed when sorting by name, just 1 of them. However when I tested this there was only 1 bookmark in that selected tag, so it got removed, tested on: Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9b5pre) Gecko/2008032106 Minefield/3.0b5pre ID:2008032106
Attachment #306182 - Attachment is obsolete: true
I didn't see that on Win XP when I verified this bug. Please file a new bug.
Status: REOPENED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Target Milestone: Firefox 3 → Firefox 3 beta5
(In reply to comment #11) > I didn't see that on Win XP when I verified this bug. > > Please file a new bug. > Well I got someone else to confirm it on XP, but will file a new bug anyway.
No longer depends on: 419731
Made bug 424648 Please try confirming there, I can confirm 100% of the time on different computers and have got other people to confirm on different OS'.
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: