Bug 420003 ? Sort by name on tag container removes titles of tagged links and does not show correct order (for ondrej@allpeers.com, r=dietrich)